--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.2",
     "awesome-typescript-loader": "^5.2.1",
     "bootstrap": "^4.3.1",
     "graphql": "^14.2.1",
