--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "dependencies": {
     "@types/node": "^12.0.0",
     "@types/react": "^16.8.15",
+    "@types/react-bootstrap": "^0.32.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.2",
+    "apollo-boost": "^0.3.1",
     "awesome-typescript-loader": "^5.2.1",
     "bootstrap": "^4.3.1",
     "graphql": "^14.2.1",
+    "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.5",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
