--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-bootstrap": "^0.32.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.2",
+    "@types/showdown": "^1.9.2",
     "apollo-boost": "^0.3.1",
     "awesome-typescript-loader": "^5.2.1",
     "bootstrap": "^4.3.1",
@@ -17,8 +18,10 @@
     "react-apollo": "^2.5.5",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-mde": "^7.3.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "showdown": "^1.9.0",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.4.5"
   },
