--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-boost": "^0.3.1",
     "awesome-typescript-loader": "^5.2.1",
     "bootstrap": "^4.3.1",
+    "for-editor": "^0.1.1",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
