--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-apollo": "^2.5.5",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.0.8",
     "react-mde": "^7.3.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
