--- a/package.json
+++ b/package.json
@@ -3,29 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.8.15",
-    "@types/react-bootstrap": "^0.32.17",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-router-dom": "^4.3.2",
-    "@types/showdown": "^1.9.2",
-    "apollo-boost": "^0.3.1",
+    "@types/node": "^12.7.2",
+    "@types/react": "^16.9.2",
+    "@types/react-bootstrap": "^0.32.19",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/showdown": "^1.9.3",
+    "apollo-boost": "^0.4.4",
     "awesome-typescript-loader": "^5.2.1",
     "bootstrap": "^4.3.1",
-    "for-editor": "^0.1.1",
-    "graphql": "^14.2.1",
+    "for-editor": "^0.3.2",
+    "graphql": "^14.5.3",
     "graphql-tag": "^2.10.1",
-    "react": "^16.8.6",
-    "react-apollo": "^2.5.5",
+    "react": "^16.9.0",
+    "react-apollo": "^3.0.1",
     "react-bootstrap": "^1.0.0-beta.8",
-    "react-dom": "^16.8.6",
-    "react-markdown": "^4.0.8",
-    "react-mde": "^7.3.2",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0",
+    "react-dom": "^16.9.0",
+    "react-markdown": "^4.1.0",
+    "react-mde": "^7.6.2",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.1.1",
     "showdown": "^1.9.0",
     "source-map-loader": "^0.2.4",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
